--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.3.0"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "cypress": "^13.3.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
     "mochawesome-report-generator": "^6.2.0"
